Create play.js and modify the styles

--- a/play.html
+++ b/play.html
@@ -4,10 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=10, minimum-scale=1.0">
         <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-        <link href="https://fonts.googleapis.com/css?
-family=Bitter:400,400i,700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?
-family=Comfortaa:300,400,500,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,700&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="assets/css/normalize.css">
         <link rel="stylesheet" href="assets/css/base.css">
@@ -78,11 +76,10 @@ family=Comfortaa:300,400,500,700&display=swap" rel="stylesheet">
                 </div>
 
                 <a class="button restart-button" onclick="restartGame()">Restart Game</a>
-                <!-- Ícones feitos por <a href="https://www.flaticon.com/br/autores/vectors-market" title="Vectors Market">Vectors Market</a> from <a href="https://www.flaticon.com/br/" title="Flaticon"> www.flaticon.com</a>
-                Ícones feitos por <a href="https://flat-icons.com/" title="Flat Icons">Flat Icons</a> from <a href="https://www.flaticon.com/br/" title="Flaticon"> www.flaticon.com</a> -->
             </div>
             
         </section>
 
+        <script src="assets/js/play.js"></script>
     </body>
 </html>
