--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
         <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=10, minimum-scale=1.0">
         
         <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-        <link href="https://fonts.googleapis.com/css?
-family=Bitter:400,400i,700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?
-family=Comfortaa:300,400,500,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,700&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="assets/css/normalize.css">
         <link rel="stylesheet" href="assets/css/base.css">
@@ -17,7 +15,7 @@ family=Comfortaa:300,400,500,700&display=swap" rel="stylesheet">
         <title>Jokempo Game</title>
     </head>
     <body class="shadows">
-        <header id="index">
+        <header>
             <h1 class="logo">Jokempo</h1>
         </header>
      
