--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=10, minimum-scale=1.0">
-        
-        <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-        <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=10, minimum-scale=1.0" />
 
-        <link rel="stylesheet" href="assets/css/normalize.css">
-        <link rel="stylesheet" href="assets/css/base.css">
-        <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+    <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,700&display=swap" rel="stylesheet" />
 
-        <title>Jokempo Game</title>
-    </head>
-    <body class="shadows">
-        <header>
-            <h1 class="logo">Jokempo</h1>
-        </header>
-     
-        <section class="stage">
-            <div class="background-game">
-                <img src="assets/img/rock-paper-scissor.png">
-            </div>
-            <h1 class="title">Seems like we were not ready for that click</h1>
-            <h2 class="subtitle">Well, let's at least play a game?</h2>
+    <link rel="stylesheet" href="public/css/normalize.css" />
+    <link rel="stylesheet" href="public/css/base.css" />
+    <link rel="stylesheet" href="public/css/index.css" />
 
-            <a class="button shadows" href="play.html">Play</a>
-        </section>
+    <title>Jokempo Game</title>
+  </head>
+  <body class="shadows">
+    <header>
+      <h1 class="logo">Jokempo</h1>
+    </header>
 
-    </body>
+    <section class="stage">
+      <div class="background-game">
+        <img src="public/img/rock-paper-scissor.png" />
+      </div>
+      <h1 class="title">Seems like we were not ready for that click</h1>
+      <h2 class="subtitle">Well, let's at least play a game?</h2>
+
+      <a class="button shadows" href="play.html">Play</a>
+    </section>
+  </body>
 </html>
